# Allink

./: .cproject  .gitignore  .project  Doxyfile  Makefile.am  Makefile.manual  README.md  config.h.in  configure  configure.ac  dependencies_ubuntu.sh  gmon.out
ConfFiles/: Draw.conf  DrawScript.dr  Dyn1d.conf  Dyn2d.conf  Dyn3d.conf  DynMC.conf  DynMD.conf  DynPore.conf  Polymers.conf  VisDiffusion.def
Debug/: makefile  sources.mk
Debug/src/: subdir.mk
LICENSE/: GPL.txt
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
doc/: Animation_8cpp_source.html  Cubo_8cpp_source.html  Cubo_8h_source.html  Cubo_8mirror_8cpp_source.html  Dinamica_8cpp_source.html  Dinamica_8h_source.html  Dinamica_page.html  DrDefinition_8cpp_source.html  DrEffect_8cpp_source.html  DrEffect_8h_source.html  DrEffect_page.html  DrFinestra_8cpp_source.html  DrFinestra_8h_source.html  DrImage_8cpp_source.html  DrImage_8h_source.html  DrOpenGL_8cpp_source.html  DrScript_8cpp_source.html  DrScript_8h_source.html  DrawControl_8cpp_source.html  DrawDefinition_8cpp_source.html  DrawFile_8cpp_source.html  DrawScene_8cpp_source.html  Draw_8cpp_source.html  Draw_8h_source.html  ElPolyDrawCGAL_8cpp_source.html  ElPolyDrawControl_8cpp_source.html  ElPolyDrawDef_8cpp_source.html  ElPolyDrawSkinCGAL_8cpp_source.html  ElPolyDrawSurfCGAL_8cpp_source.html  ElPolyDrawSurfMarchCubes_8cpp_source.html  ElPolyDrawSurf_8cpp_source.html  ElPolyDrawSurf_8h_source.html  ElPolyDrawTriangCGAL_8cpp_source.html  ElPolyDraw_8cpp_source.html  ElPolyEl_8cpp_source.html  ElPolyMeasure_8cpp_source.html  ElPolyOutput_8cpp_source.html  ElPolyProfDens_8cpp_source.html  ElPolyProfPre_8cpp_source.html  ElPolyProfile_8cpp_source.html  (+300 more)
doc/latex/: Dinamica_page.tex  DrEffect_page.tex  ElPoly_page.tex  Visualizza_page.tex  annotated.tex  classAnimation.tex  classDdArray.tex  classDdDoubleLoop.eps  classDdDoubleLoop.tex  classDdFixedSize.eps  classDdFixedSize.tex  classDdLinkedList.eps  classDdLinkedList.tex  classDomCell.tex  classDomDecBasics.tex  classDomPart.tex  classDrEffect.eps  classDrEffect.tex  classDrFinestra.tex  classDrScript.tex  classDraw.eps  classDraw.tex  classElPoly.tex  classElementiGrafici.tex  classFinestra.tex  classForces.tex  classFuntore.eps  classFuntore.tex  classImpostaNBin.tex  classMatInt.tex  classMatematica.tex  classMatrice.tex  classMy__face__base.tex  classNeiVertex.tex  classPiano.tex  classProperties.tex  classQuadri.tex  classQuaternione.tex  classSingProc.tex  classSpecFuntore.tex  (+58 more)
doc_allink/: Animation_8cpp_source.html  Cubo_8cpp_source.html  Cubo_8h_source.html  Cubo_8mirror_8cpp_source.html  Dinamica_8cpp_source.html  Dinamica_8h_source.html  Dinamica_page.html  DrDefinition_8cpp_source.html  DrEffect_8cpp_source.html  DrEffect_8h_source.html  DrEffect_page.html  DrFinestra_8cpp_source.html  DrFinestra_8h_source.html  DrImage_8cpp_source.html  DrImage_8h_source.html  DrOpenGL_8cpp_source.html  DrScript_8cpp_source.html  DrScript_8h_source.html  DrawControl_8cpp_source.html  DrawDefinition_8cpp_source.html  DrawFile_8cpp_source.html  DrawScene_8cpp_source.html  Draw_8cpp_source.html  Draw_8h_source.html  ElPolyDrawCGAL_8cpp_source.html  ElPolyDrawControl_8cpp_source.html  ElPolyDrawDef_8cpp_source.html  ElPolyDrawSkinCGAL_8cpp_source.html  ElPolyDrawSurfCGAL_8cpp_source.html  ElPolyDrawSurfMarchCubes_8cpp_source.html  ElPolyDrawSurf_8cpp_source.html  ElPolyDrawSurf_8h_source.html  ElPolyDrawTriangCGAL_8cpp_source.html  ElPolyDraw_8cpp_source.html  ElPolyEl_8cpp_source.html  ElPolyMeasure_8cpp_source.html  ElPolyOutput_8cpp_source.html  ElPolyProfDens_8cpp_source.html  ElPolyProfPre_8cpp_source.html  ElPolyProfile_8cpp_source.html  (+299 more)
doc_allink/latex/: Dinamica_page.tex  DrEffect_page.tex  ElPoly_page.tex  Visualizza_page.tex  annotated.tex  classAnimation.eps  classAnimation.tex  classDdArray.eps  classDdArray.tex  classDdDoubleLoop.tex  classDdFixedSize.tex  classDdLinkedList.tex  classDomCell.tex  classDomDecBasics.eps  classDomDecBasics.tex  classDomPart.tex  classDrEffect.tex  classDrFinestra.eps  classDrFinestra.tex  classDrScript.eps  classDrScript.tex  classDraw.tex  classElPoly.eps  classElPoly.tex  classElementiGrafici.eps  classElementiGrafici.tex  classFinestra.eps  classFinestra.tex  classForces.eps  classForces.tex  classFuntore.tex  classImpostaNBin.eps  classImpostaNBin.tex  classMatInt.tex  classMatematica.eps  classMatematica.tex  classMatrice.tex  classMy__face__base.eps  classMy__face__base.tex  classNeiVertex.tex  (+63 more)
dox/: Addraw.dox  Addyn.dox  Avvis.dox  DrEffect.dox  ElPoly.dox  compile.dox  custom.dox  data.dox  design.dox  features.dox  main.dox  param.dox  typedef.dox  usage.dox
examples/: Dinamica.conf  Draw.conf  DrawScript.dr  Dyn2d.conf  DynCyl.conf  DynLeaves.conf  DynTrial.conf  Polymers.conf  Visualizza.def  gmon.out
include/: Cubo.h  Draw.h  MakeInclude.mk  Matematica.h  MatematicaMatrix.h  MatematicaPlane.h  MatematicaQuadri.h  MatematicaStruct.h  MatematicaVect.h  SingProc.h  VarDatFile.h  VarData.h
src/: Doxyfile.bak  Makefile
src/Addraw/: DrImage.cpp  DrImage.h  Draw.cpp  DrawControl.cpp  DrawDefinition.cpp  DrawFile.cpp  DrawScene.cpp  Makefile  ProvaDraw.cpp  ReadWritePng.cpp
src/Addyn/: Dinamica.cpp  Dinamica.h  Forces.cpp  Forces.h  ForcesBoundary.cpp  ForcesCalcEnergies.cpp  ForcesCreate.cpp  ForcesDraw.cpp  ForcesForceField.cpp  ForcesIntegration.cpp  ForcesLoop.cpp  ForcesTens.cpp  Makefile  Prova.c
src/Avvis/: ElementiGrafici.cpp  ElementiGrafici.h  ElementiGraficiComm.cpp  ElementiGraficiDis.cpp  ElementiGraficiEl.cpp  Finestra.cpp  Makefile  Visualizza.cpp  configure  (+3 more)
(+401 files in other folders)
